--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="task_upload">上传任务</string>
     <string name="task_cloud_download">离线任务</string>
     <string name="task_done">完成任务</string>
-    <string name="cancel_all_downloads">取消全部</string>
+    <string name="cancel_all_downloads">取消全部取回任务</string>
     <string name="pause_all_downloads">暂停全部取回任务</string>
     <string name="cancel_all_uploads">取消全部上传任务</string>
     <string name="exist_at_local">已取回本地</string>
@@ -41,4 +41,16 @@
     <string name="sort_by_date_desc">日期倒序</string>
     <string name="sort_by_size_desc">大小倒序</string>
     <string name="sort_by_name_desc">名称倒序</string>
+    <string name="play_now">立即播放</string>
+    <string name="codec_name">编码类型</string>
+    <string name="other_info">其他信息</string>
+    <string name="show_hidden_files">显示隐藏文件</string>
+    <string name="sort_mode">排序方式</string>
+    <string name="start_all_tasks">启动全部任务</string>
+    <string name="pause_all_tasks">暂停全部任务</string>
+    <string name="clear_all_downloads">清除取回记录</string>
+    <string name="clear_all_uploads">清空上传记录</string>
+    <string name="pause_all_uploads">暂停全部上传任务</string>
+    <string name="cancel_all_tasks">取消全部任务</string>
+    <string name="clear_all_task_histories">清空任务记录</string>
 </resources>
