--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,7 @@
     <string name="pause_all_uploads">暂停全部上传任务</string>
     <string name="cancel_all_tasks">取消全部任务</string>
     <string name="clear_all_task_histories">清空任务记录</string>
+    <string name="start_all_uploads">启动全部上传任务</string>
+    <string name="start_all_downloads">启动全部取回任务</string>
+    <string name="attach_progress">加载进度</string>
 </resources>
