--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="play_in_background">后台播放</string>
     <string name="please_input_search_keywords">请输入搜索关键词..</string>
     <string name="search_file_from_cloud_drive">搜索云盘文件</string>
+    <string name="browser_folder">浏览文件夹</string>
 </resources>
