--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,19 @@
     <string name="please_input_search_keywords">请输入搜索关键词..</string>
     <string name="search_file_from_cloud_drive">搜索云盘文件</string>
     <string name="browser_folder">浏览文件夹</string>
+    <string name="file_date">文件日期</string>
+    <string name="file_rename">重新命名</string>
+    <string name="browser_files">浏览文件</string>
+    <string name="folder_detail">详细信息</string>
+    <string name="media_cast">无线投屏</string>
+    <string name="select_episode">选择剧集</string>
+    <string name="play">播放</string>
+    <string name="stop">停止</string>
+    <string name="select_cast_device">选择投屏设备</string>
+    <string name="media_cast_guide">媒体投射引导</string>
+    <string name="air_play_title_01">打开智能电视或盒子“投屏”按钮</string>
+    <string name="air_play_subtitle_01">保持智能电视或盒子和手机在同一WIFI下。</string>
+    <string name="air_play_title_02">点击手机APP播放器中“投屏”按钮</string>
+    <string name="air_play_subtitle_02">点击投屏按钮后，选择搜索到的投屏设备，即可完成操作。</string>
+    <string name="looking_for_cast_device">正在搜寻投屏设备..</string>
 </resources>
