--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">虚拟云盘</string>
     <string name="state_view_nothing_here">这里什么也没有喔_(:3」∠❀)_</string>
-    <string name="state_view_retry">\u3000重\u2000试\u3000</string>
+    <string name="state_view_retry">重\u2000试</string>
     <string name="state_view_something_went_wrong">出现了一些问题，请稍候重试_(:3」∠❀)_</string>
     <string name="state_view_nothing_searched">啥也没搜到捏_(:3」∠❀)_</string>
 
@@ -49,8 +49,8 @@
     <string name="sort_mode">排序方式</string>
     <string name="start_all_tasks">启动全部任务</string>
     <string name="pause_all_tasks">暂停全部任务</string>
-    <string name="clear_all_downloads">清除取回记录</string>
-    <string name="clear_all_uploads">清空上传记录</string>
+    <string name="clear_all_downloads">清除取回任务</string>
+    <string name="clear_all_uploads">清空上传任务</string>
     <string name="pause_all_uploads">暂停全部上传任务</string>
     <string name="cancel_all_tasks">取消全部任务</string>
     <string name="clear_all_task_histories">清空任务记录</string>
@@ -80,4 +80,19 @@
     <string name="air_play_title_02">点击手机APP播放器中“投屏”按钮</string>
     <string name="air_play_subtitle_02">点击投屏按钮后，选择搜索到的投屏设备，即可完成操作。</string>
     <string name="looking_for_cast_device">正在搜寻投屏设备..</string>
+    <string name="delete_download_recode">删除记录</string>
+    <string name="share_file">分享文件</string>
+    <string name="cancel_download_task">取消任务</string>
+    <string name="pause_download_task">暂停任务</string>
+    <string name="download_task_done">取回完成</string>
+    <string name="delete">删除</string>
+    <string name="clear_all_done_tasks">清空已完成任务</string>
+    <string name="delete_task">删除任务</string>
+    <string name="save_gif">保存动图</string>
+    <string name="gif_created_failed_retry_later">生成GIF预览图失败，请稍候重试</string>
+    <string name="gif_creating">正在生成GIF预览图...</string>
+    <string name="uploading">正在上传</string>
+    <string name="upload_task_done">上传完毕</string>
+    <string name="uploading_task">正在上传</string>
+    <string name="clear_all_upload_done_task">清空上传记录</string>
 </resources>
