--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,5 @@
     <string name="port">端口</string>
     <string name="access_password">通行密码</string>
     <string name="host">主机</string>
+    <string name="connect_server">开始连接服务端</string>
 </resources>
